--- a/hr_attendance_report/report/report.xml
+++ b/hr_attendance_report/report/report.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+     <record id="paperformat_attendance"
+            model="report.paperformat">
+        <field name="name">Attendance A4</field>
+        <field name="default" eval="True"/>
+        <field name="format">A4</field>
+        <field name="page_height">0</field>
+        <field name="page_width">0</field>
+        <field name="orientation">Landscape</field>
+        <field name="margin_top">45</field>
+        <field name="margin_bottom">28</field>
+        <field name="margin_left">5</field>
+        <field name="margin_right">5</field>
+        <field name="header_line" eval="False"/>
+        <field name="header_spacing">40</field>
+        <field name="dpi">90</field>
+    </record>
+
     <report
             id="attendance_report_pdf"
             string="Bonus"
             model="attendance.report"
             report_type="qweb-pdf"
             name="hr_attendance_report.attendance_report_id_print"
-            file="hr_attendance_report.attendance_report_id_print"/>
+            file="hr_attendance_report.attendance_report_id_print"
+            paperformat="paperformat_attendance"
+    />
 </odoo>
