--- a/smc_carpenter/views/views.xml
+++ b/smc_carpenter/views/views.xml
@@ -1,6 +1,17 @@
 <odoo>
     <data>
 
+        <record model="ir.ui.view" id="account_move_form_inh">
+            <field name="name">account.move.form.inh</field>
+            <field name="model">account.move</field>
+            <field name="inherit_id" ref="account.view_move_form"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='name']" position="after">
+                    <field name="client_name" readonly="1"/>
+                </xpath>
+            </field>
+        </record>
+
         <record model="ir.ui.view" id="account_account_form_inh">
             <field name="name">account.account.form.inh</field>
             <field name="model">account.account</field>
