--- a/expense_statement/views/account_account_inherited.xml
+++ b/expense_statement/views/account_account_inherited.xml
@@ -1,16 +1,16 @@
 <odoo>
     <data>
 
-        <record id="action_account_move_server" model="ir.actions.server">
-            <field name="name">Assign Branches</field>
-            <field name="model_id" ref="account.model_account_move"/>
-            <field name="binding_model_id" ref="account.model_account_move"/>
-            <field name="state">code</field>
-            <field name="code">
-                if records:
-                action = records.action_add_branch()
-            </field>
-        </record>
+<!--        <record id="action_account_move_server" model="ir.actions.server">-->
+<!--            <field name="name">Assign Branches</field>-->
+<!--            <field name="model_id" ref="account.model_account_move"/>-->
+<!--            <field name="binding_model_id" ref="account.model_account_move"/>-->
+<!--            <field name="state">code</field>-->
+<!--            <field name="code">-->
+<!--                if records:-->
+<!--                action = records.action_add_branch()-->
+<!--            </field>-->
+<!--        </record>-->
 
         <record id="view_partner_tree_inh" model="ir.ui.view">
             <field name="name">res.partner.tree</field>
