--- a/import_logistic/reports/landed_cost.xml
+++ b/import_logistic/reports/landed_cost.xml
@@ -66,16 +66,16 @@
                                 <strong> Clearing Agent Bill No: </strong><span class="m-0" t-field="o.clearing_no"/>
                             </div>
                             <div class="col-6" style="font-size:17px;">
-                                <strong>Created Date: </strong><span class="m-0" t-esc="o.date_planned.strftime('%d/%m/%Y')"/>
+                                <strong>Created Date: </strong><span class="m-0" t-esc="o.new_date.strftime('%d/%m/%Y')"/>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6" style="font-size:17px;">
                                 <strong> GD No: </strong><span class="m-0" t-field="o.gd_no"/>
                             </div>
-                            <div class="col-6" style="font-size:17px;">
-                                <strong>Date: </strong><span class="m-0" t-esc="o.new_date.strftime('%d/%m/%Y')"/>
-                            </div>
+<!--                            <div class="col-6" style="font-size:17px;">-->
+<!--                                <strong>Date: </strong><span class="m-0" t-esc="o.new_date.strftime('%d/%m/%Y')"/>-->
+<!--                            </div>-->
                             <!--                            <div class="col-6" style="font-size:17px;">-->
                             <!--                                <strong> Clearing Agent Bill No: </strong><span class="m-0" t-field="o.clearing_no"/>-->
                             <!--                            </div>-->
