--- a/expense_statement/reports/templates.xml
+++ b/expense_statement/reports/templates.xml
@@ -14,7 +14,10 @@
                     <table class="table table-sm" >
                         <th >Date</th>
                         <t t-foreach="accounts" t-as="account">
-                            <th class="text-center" t-esc="account.name"/>
+                            <t t-set="account_total" t-value="get_account_total(account)"/>
+                            <t t-if="account_total!=0">
+                                <th class="text-center" t-esc="account.name"/>
+                            </t>
                         </t>
                         <t t-foreach="dates" t-as="date">
                             <tr>
@@ -22,10 +25,13 @@
                                     <span t-esc="date.strftime('%d/%m/%Y')" class="text-nowrap"/>
                                 </td>
                                 <t t-foreach="accounts" t-as="account">
-                                    <t t-set="total" t-value="get_date_data(date, account)"/>
-                                    <td class="text-center">
-                                        <span t-esc="'{0:,.1f}'.format(float(total))"/>
-                                    </td>
+                                    <t t-set="account_total" t-value="get_account_total(account)"/>
+                                    <t t-if="account_total!=0">
+                                        <t t-set="total" t-value="get_date_data(date, account)"/>
+                                        <td class="text-center">
+                                            <span t-esc="'{0:,.1f}'.format(float(total))"/>
+                                        </td>
+                                    </t>
                                 </t>
                             </tr>
                         </t>
@@ -33,9 +39,11 @@
                             <td><strong>Total</strong></td>
                             <t t-foreach="accounts" t-as="acc">
                                 <t t-set="account_total" t-value="get_account_total(acc)"/>
-                                <td class="text-center">
-                                   <strong> <span t-esc="'{0:,.1f}'.format(float(account_total))"/></strong>
-                                </td>
+                                <t t-if="account_total!=0">
+                                    <td class="text-center">
+                                        <strong> <span t-esc="'{0:,.1f}'.format(float(account_total))"/></strong>
+                                    </td>
+                                </t>
                             </t>
                         </tr>
                     </table>
